Some little fix

--- a/README.rdoc
+++ b/README.rdoc
@@ -12,7 +12,13 @@ other providers authorization <http://loginza.ru/features-and-benefits#providers
 
 Via rails plugin:
 
+Rails 3:
+
   rails plugin install git://github.com/galetahub/loginza.git
+
+Rails 2:
+  
+  ./script/plugin install git://github.com/galetahub/loginza.git
 
 Via rails gem:
   
@@ -24,19 +30,19 @@ Via rails gem:
 
 Simple example:
   
-  <%= loginza_button_tag("Login via OpenID", clients_path) %>
+  <%= loginza_button_tag("Login via OpenID", clients_url) %>
  
 With set of providers:
   
-  <%= loginza_button_tag("Login via OpenID", clients_path, :providers => [ :google, :facebook, :twitter ]) %>
+  <%= loginza_button_tag("Login via OpenID", clients_url, :providers => [ :google, :facebook, :twitter ]) %>
     
 With default provider:
   
-  <%= loginza_button_tag("Login via OpenID", clients_path, :provider => :google) %>
+  <%= loginza_button_tag("Login via OpenID", clients_url, :provider => :google) %>
 
 With a block:
 
-  <%= loginza_button_tag(clients_path, :provider => :google) do %>
+  <%= loginza_button_tag(clients_url, :provider => :google) do %>
    <div class='loginza'>
      ...
    </div>
